--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h1 class="display-4 fw-bold mb-3">Bayere Abdoul</h1>
                         <h2 class="h3 mb-4">Étudiant en BTS SIO option SISR</h2>
                         <p class="lead mb-5"> 
-                            Hey guys bienvenue dans mon Portfolio !!!
+                            Bienvenue sur mon Portfolio !!!
                         </p>
                         <a href="#presentation" class="btn btn-outline-primary btn-lg">
                             Découvrir <i class="bi bi-arrow-down ms-2"></i>
@@ -126,7 +126,7 @@
                             <ul class="skill-list">
                                 <li>Debian</li>
                                 <li>Ubuntu</li>
-                                <li>Windows</li>
+                                <li>Windows serveur</li>
                                 <li>Kali Linux</li>
                             </ul>
                         </div>
@@ -177,6 +177,11 @@
                                 <li>Cisco</li>
                                 <li>Wireshark</li>
                                 <li>Parfeu (Pfsense)</li>
+                                <li>Fail2ban</li>
+                                <li>PAM</li>
+                                <li>sudo</li>
+                                <li>Nagios</li>
+                                <li>OpenVPN</li>
 
                             </ul>
                         </div>
@@ -429,7 +434,7 @@
                     <!-- Project site de documentation -->
                     <div class="col-md-6">
                         <div class="card h-100">
-                            <img src="assets/img/project_docu.png" class="card-img-top" alt="Project">
+                            <img src="assets/img/site_docu.png" class="card-img-top" alt="Project">
                             <div class="card-body">
                                 <h5 class="card-title">Site de documentaiton</h5>
                                 <p class="card-text">Découvrez ce site, où vous trouverez des tutoriels pour vous aider à installer et configurer des logiciels</p>
@@ -478,7 +483,7 @@
                     <!-- Project Portfolio V2 -->
                     <div class="col-md-6">
                         <div class="card h-100">
-                            <img src="assets/img/portfoliov2.png" class="card-img-top" alt="Project">
+                            <img src="assets/img/sky_projet_perso.png" class="card-img-top" alt="Project">
                             <div class="card-body">
                                 <h5 class="card-title">Portfolio</h5>
                                 <p class="card-text">Conception d'un site web</p>
@@ -511,7 +516,7 @@
                             <img src="assets/img/Mission1 - analyse reseau anasang.jpg" class="card-img-top" alt="Project">
                             <div class="card-body">
                                 <h5 class="card-title">ANASANG - Analyse</h5>
-                                <p class="card-text">Analyse du système informatique du laboratoire ANASANG</p>
+                                <p class="card-text text-justify">Le laboratoire ANASANG, spécialisé en biologie médicale, doit moderniser son parc informatique pour améliorer performance et sécurité. Nous proposons de remplacer les serveurs obsolètes par Windows Server 2022, migrer les postes clients vers Windows 11, et renforcer la sécurité avec une authentification par carte à puce et un VPN.</p>
                                 <div class="mb-3">
                                 </div>
                                 <div class="d-flex gap-3">
@@ -529,8 +534,11 @@
                             <img src="assets/img/Windows_page-0001.jpg" class="card-img-top" alt="Project">
                             <div class="card-body">
                                 <h5 class="card-title">ANASANG - WIndows Server</h5>
-                                <p class="card-text">Configuration et installation de windows server 2022</p>
+                                <p class="card-text text-justify">Pour moderniser son infrastructure, le laboratoire ANASANG a choisi Windows Server 2022 pour ses fonctionnalités avancées en sécurité et gestion cloud. Ce rapport présente l'installation et la configuration des services DHCP, DNS et Active Directory, ainsi que la création des utilisateurs. Ces améliorations renforcent la performance et la sécurité du système tout en respectant les normes de qualité du laboratoire.</p>
                                 <div class="mb-3">
+                                    <span class="badge bg-primary me-2">Configuration réseau</span>
+                                    <span class="badge bg-primary me-2">Gestion des services réseau (AD, DHCP, DNS)</span>
+                                    <span class="badge bg-primary me-2">Création et gestion des utilisateurs</span>
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="assets/compte-rendu/anasang_mission_2.pdf" target="_blank" class="btn btn-outline-primary">
@@ -547,8 +555,10 @@
                             <img src="assets/img/proxmox.jpg" class="card-img-top" alt="Project">
                             <div class="card-body">
                                 <h5 class="card-title">ANASANG - Virtualisation</h5>
-                                <p class="card-text">Installation de Proxmox au sein de Anasang</p>
+                                <p class="card-text text-justify">Dans le cadre de la modernisation de son infrastructure, le laboratoire ANASANG a choisi de virtualiser ses serveurs en utilisant Proxmox VE, un hyperviseur de type 1 basé sur Linux. Cette solution permet une meilleure utilisation des ressources matérielles, une gestion flexible des machines virtuelles et une réduction des coûts.</p>
                                 <div class="mb-3">
+                                    <span class="badge bg-primary me-2">Gestion des ressources matérielles</span>
+                                    <span class="badge bg-primary me-2">Configuration réseau</span>
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="assets/compte-rendu/anasang_mission_3.pdf" target="_blank" class="btn btn-outline-primary">
@@ -564,8 +574,8 @@
                         <div class="card h-100">
                             <img src="assets/img/glpi_msgsrv-1.png" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Société Ménuimétal - Mise en Place de GLPI et d'un serveur de messagerie</h5>
-                                <p class="card-text">Ce projet consiste à intégrer GLPI avec un serveur de messagerie sous Linux pour optimiser la gestion des incidents et l'inventaire du parc informatique.</p>
+                                <h5 class="card-title">Société Ménuimétal - Intégration de GLPI et Serveur de Messagerie</h5>
+                                <p class="card-text text-justify">Pour moderniser sa gestion informatique, la société Ménuimétal met en place GLPI, un outil de gestion de parc et de helpdesk, couplé à un serveur de messagerie. Ce projet vise à améliorer la gestion des tickets, l'inventaire des équipements et la communication interne.</p>
                                 <div class="mb-3">
                                     <span class="badge bg-primary me-2">Administration Linux</span>
                                     <span class="badge bg-primary me-2">Gestion des tickets et des incidents</span>
@@ -585,11 +595,12 @@
                         <div class="card h-100">
                             <img src="assets/img/OMV.png" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Société Ménuimétal - Mise en place d’une solution de sauvegarde</h5>
-                                <p class="card-text">Mise en place d'un serveur Open Media Volt (OMV).</p>
+                                <h5 class="card-title">Société Ménuimétal - Mise en place d’une solution de sauvegarde avec OpenMediaVault</h5>
+                                <p class="card-text text-justify">Dans un contexte où la protection des données est essentielle, la société Ménuimétal déploie une solution de sauvegarde robuste basée sur OpenMediaVault (OMV). Ce projet vise à sécuriser les fichiers statiques, les bases de données et les services critiques comme Nagios, GLPI, Dokuwiki et Wordpress, tout en assurant une gestion efficace des sauvegardes via des outils comme rsync et RAID.</p>
                                 <div class="mb-3">
-                                    <span class="badge bg-primary me-2">RAID</span>
-                                    <span class="badge bg-primary me-2">OMV</span>
+                                    <span class="badge bg-primary me-2">Sécurité</span>
+                                    <span class="badge bg-primary me-2">Configuration de services</span>
+                                    <span class="badge bg-primary me-2">Automatisation</span>
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="assets/compte-rendu/OMV.pdf" target="_blank" class="btn btn-outline-primary">
@@ -605,11 +616,11 @@
                         <div class="card h-100">
                             <img src="assets/img/nagios_rancid.png" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Société Ménuimétal - Déploiement d'une solution de supervision et de sauvegarde des configurations réseau</h5>
-                                <p class="card-text">Mise en place d'un serveur Nagios et Rancid</p>
+                                <h5 class="card-title">Société Menuimétal - Déploiement de Nagios et RANCID pour la Supervision et la Sauvegarde Réseau</h5>
+                                <p class="card-text text-justify">Nous avons déployé Nagios pour surveiller les serveurs et RANCID pour sauvegarder les configurations des équipements réseau. L'objectif était d'améliorer la gestion et la sécurité du système informatique de l'entreprise.</p>
                                 <div class="mb-3">
                                     <span class="badge bg-primary me-2">Supervision</span>
-                                    <span class="badge bg-primary">Sauvgarde</span>
+                                    <span class="badge bg-primary">Sauvegarde des configurations réseau</span>
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="assets/compte-rendu/Nagios_Rancid.pdf" target="_blank" class="btn btn-outline-primary">
@@ -625,12 +636,12 @@
                         <div class="card h-100">
                             <img src="assets/img/logs.png" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Société Ménuimétal - Mise en place de dispositifs de journalisation</h5>
-                                <p class="card-text">Mise en place d'outil pour la gestion des logs tels que graylog et rsyslog</p>
+                                <h5 class="card-title">Société Menuimétal - Mise en place de dispositifs de journalisation pour une gestion optimisée des logs</h5>
+                                <p class="card-text text-justify">Nous avons réalisé un projet pour l'entreprise Menuimétal.Notre mission était de mettre en place des outils pour gérer les logs (journaux) des serveurs et des équipements réseau. Nous avons utilisé <strong>Graylog</strong> et <strong>Rsyslog</strong> pour centraliser et analyser ces logs. L'objectif était de surveiller les erreurs, améliorer la sécurité et faciliter la gestion du système informatique.</p>
                                 <div class="mb-3">
-                                    <span class="badge bg-primary me-2">Gestion de logs</span>
-                                    <span class="badge bg-primary me-2">Graylog</span>
-                                    <span class="badge bg-primary">Rsyslog</span>
+                                    <span class="badge bg-primary me-2">Gestion des logs</span>
+                                    <span class="badge bg-primary me-2">Centralisation des logs</span>
+                                    <span class="badge bg-primary">Sécurité et surveillance</span>
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="assets/compte-rendu/logs.pdf" target="_blank" class="btn btn-outline-primary">
@@ -646,11 +657,13 @@
                         <div class="card h-100">
                             <img src="assets/img/LoadBalancing.png" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Société Ménuimétal - REPLICATION HAPROXY HEARTBEAT</h5>
-                                <p class="card-text">Mise en place d'une solution de replication avec haproxy et heartbeat</p>
+                                <h5 class="card-title">Société Menuimétal - Réplication MySQL, Répartition de charge avec HAProxy et Haute disponibilité avec Heartbeat</h5>
+                                <p class="card-text text-justify">Dans le cadre d'un projet pour l'entreprise Menuimétal, nous avons mis en place plusieurs solutions pour améliorer la disponibilité et la performance de leur infrastructure informatique. Nous avons d'abord configuré une <strong>réplication MySQL</strong> entre un serveur maître et un serveur esclave pour assurer la redondance des bases de données. Ensuite, nous avons déployé <strong>HAProxy</strong> pour répartir la charge entre trois serveurs web, garantissant une meilleure gestion du trafic. Enfin, nous avons implémenté <strong>Heartbeat</strong> pour assurer la haute disponibilité des serveurs HAProxy, permettant une bascule automatique en cas de panne.</p>
                                 <div class="mb-3">
-                                    <span class="badge bg-primary me-2">Load balancig</span>
-                                    <span class="badge bg-primary me-2">Docusaurus</span>
+                                    <span class="badge bg-primary me-2">Réplication MySQL</span>
+                                    <span class="badge bg-primary me-2">Répartition de charge avec HAProxy</span>
+                                    <span class="badge bg-primary me-2">Haute disponibilité avec Heartbeat</span>
+
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="/assets/compte-rendu/haproxy_hearbeat.pdf" target="_blank" class="btn btn-outline-primary">
@@ -666,11 +679,12 @@
                         <div class="card h-100">
                             <img src="assets/img/vpn.png" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Société Ménuimétal - Dispositifs de sécurité</h5>
-                                <p class="card-text">Mise en place d'un serveur VPN</p>
+                                <h5 class="card-title">Société Menuimétal - Renforcement de la sécurité avec SSH, VPN et Fail2Ban</h5>
+                                <p class="card-text text-justify">Dans le cadre de notre projet pour Menuimétal, nous avons renforcé la sécurité de leur infrastructure en mettant en place plusieurs dispositifs. Nous avons configuré <strong>l'authentification SSH</strong> par clé publique pour sécuriser les connexions distantes, déployé un <strong>VPN</strong> avec OpenVPN pour un accès sécurisé au réseau interne, et installé <strong>Fail2Ban</strong> pour protéger les services contre les attaques par force brute.Ces solutions permettent de garantir la confidentialité des données, de limiter les accès non autorisés et de surveiller les tentatives d'intrusion.</p>
                                 <div class="mb-3">
-                                    <span class="badge bg-primary me-2">OpenVPN</span>
-                                    <span class="badge bg-primary">MarkDown</span>
+                                    <span class="badge bg-primary me-2">Authentification SSH par clé publique</span>
+                                    <span class="badge bg-primary">Déploiement d'OpenVPN</span>
+                                    <span class="badge bg-primary">Configuration de Fail2Ban</span>
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="assets/compte-rendu/vpn.pdf" target="_blank" class="btn btn-outline-primary">
@@ -681,7 +695,7 @@
                         </div>
                     </div>
                     <!-- FIN - vpn -->
-                    <!-- Project site de documentation -->
+                    <!-- Project site de documentation
                     <div class="col-md-6">
                         <div class="card h-100">
                             <img src="assets/img/project_docu.png" class="card-img-top" alt="Project">
@@ -704,7 +718,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- FIN - Project site de documentation -->
+                     FIN - Project site de documentation -->
                 </div>
             </div>
 
@@ -793,7 +807,7 @@ Le domaine de l'informatique est en perpétuelle évolution, il est donc importa
                             <ul class="list-unstyled">
                                 <li class="mb-3">
                                     <h6>Flux RSS</h6>
-                                    <p class="text-muted mb-2">Suivre les publications spécialisées et les sites de référence sur la virtualisation pour rester informé.</p>
+                                    <p class="text-muted mb-2 text-justify">Suivi des publications spécialisées et des sites de référence sur la virtualisation via <strong>Feedly</strong> et <strong>Pearltrees</strong> pour organiser et centraliser les informations.</p>
                                 </li>
                                 <li class="mb-3">
                                     <h6>Twitter et LinkedIn</h6>
@@ -801,7 +815,7 @@ Le domaine de l'informatique est en perpétuelle évolution, il est donc importa
                                 </li>
                                 <li class="mb-3">
                                     <h6>Forums et Sites Techniques</h6>
-                                    <p class="text-muted mb-2">Analyser les nouveaux produits et lire les retours d’expérience d’autres professionnels.</p>
+                                    <p class="text-muted mb-2">Analyse des nouveaux produits et lecture des retours d’expérience d’autres professionnels (ex : Reddit).</p>
                                 </li>
                             </ul>
                         </div>
