--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                                     <span class="badge bg-primary me-2">Administration réseau</span>
                                     <span class="badge bg-primary">Maintenace technique</span>
                                 </div>
-                                <a href="assets/compte-rendu/compte_rendu1.0.pdf" class="btn btn-outline-primary">
+                                <a href="assets/compte-rendu/compte_rendu1.0.pdf" target="_blank" class="btn btn-outline-primary">
                                     <i class="bi bi-file-earmark-text me-2"></i>Lire le rapport
                                 </a>
                             </div>
@@ -755,7 +755,7 @@
                                 <div class="mb-3">
                                     <span class="badge bg-primary me-2">Administration réseau</span>
                                 </div>
-                                <a href="#" class="btn btn-outline-primary">
+                                <a href="assets/compte-rendu/stage2annee.pdf"  target="_blank" class="btn btn-outline-primary">
                                     <i class="bi bi-file-earmark-text me-2"></i>Lire le rapport
                                 </a>
                             </div>
@@ -850,7 +850,7 @@ Le domaine de l'informatique est en perpétuelle évolution, il est donc importa
                             <a href="#" class="btn btn-outline-primary">
                                 <i class="bi bi-github"></i>
                             </a>
-                            <a href="#" class="btn btn-outline-primary">
+                            <a href="" class="btn btn-outline-primary">
                                 <i class="bi bi-linkedin"></i>
                             </a>
                         </div>
