--- a/index.html
+++ b/index.html
@@ -488,10 +488,10 @@
                                 <h5 class="card-title">Portfolio</h5>
                                 <p class="card-text">Conception d'un site web</p>
                                 <div class="mb-3">
+                                    <span class="badge bg-primary me-2">HTML</span>
                                     <span class="badge bg-primary me-2">CSS</span>
-                                    <span class="badge bg-primary me-2">React</span>
-                                    <span class="badge bg-primary">Docusaurus</span>
-                                    <span class="badge bg-primary">MarkDown</span>
+                                    <span class="badge bg-primary">JavaScript</span>
+                                    <span class="badge bg-primary">React</span>
                                 </div>
                                 <div class="d-flex gap-3">
                                     <a href="#" class="btn btn-outline-primary">
