--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-8 text-center">
                     <p class="lead text-justify">
                         Au cours du premier semestre, j'ai été confronté à un choix entre SISR et SLAM. Cependant, mon intérêt pour la cybersécurité a finalement orienté ma décision vers le réseau, où je cherche à acquérir des bases solides, essentielles pour évoluer dans ce domaine. 
-                        Mon parcours en BTS SIO (Services Informatiques aux Organisations), spécialité SISR, m'a permis de développer une expertise technique solide et une approche méthodique des problèmes. Mon objectif est de poursuivre mes études jusqu'à un bac +5 en école d'ingénieur.
+                        Mon parcours en BTS SIO (Services Informatiques aux Organisations), spécialité SISR, m'a permis de développer une expertise technique solide et une approche méthodique des problèmes. Mon objectif est de poursuivre mes études jusqu'à un bac +5.
                     </p>
                     <a href="assets/compte-rendu/CV.pdf"  target="_blank" class="btn btn-primary mt-4">Mon CV</a>
                 </div>
@@ -176,13 +176,12 @@
                             <ul class="skill-list">
                                 <li>Cisco</li>
                                 <li>Wireshark</li>
-                                <li>Parfeu (Pfsense)</li>
+                                <li>Pare-feu (Pfsense)</li>
                                 <li>Fail2ban</li>
                                 <li>PAM</li>
                                 <li>sudo</li>
                                 <li>Nagios</li>
                                 <li>OpenVPN</li>
-
                             </ul>
                         </div>
                     </div>
@@ -392,7 +391,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <h5 class="card-title">Option SLAM</h5>
-                                <p class="card-text text-justify"> L'Option Solutions Logicielles et Applications Métiers :
+                                <p class="card-text text-justify"> L'option Solutions Logicielles et Applications Métiers :
                                     Cette option forme des professionnels spécialisés dans le développement de logiciels et d'applications métiers. Les étudiants apprennent à concevoir, développer, tester et déployer des solutions logicielles répondant aux besoins spécifiques des entreprises. Voici quelques compétences clés acquises dans cette option :
                                 <ul>
                                     <li>Programmation (Java, C#, PHP, etc.).</li>
@@ -782,9 +781,9 @@
                             <p class="mb-3 text-justify">
 Le domaine de l'informatique est en perpétuelle évolution, il est donc important de suivre les nouvelles avancées technologiques pour éviter que nos outils et nos connaissances ne deviennent obsolètes. La veille technologique est une méthode qui aide à rester informé des innovations dans des domaines tels que l'informatique. Cela nous permet de garder nos connaissances à jour.
                             </p>
-                            <h6 class="h5 text-center">Thème choisie : La Virtualisation</h6>
+                            <h6 class="h5 text-center"> Thème choisi : La Virtualisation Serveur avec VMware</h6>
                             <p class="text-justify">
-                                J'ai choisi de me concentrer sur la virtualisation car elle devient une composante cruciale pour les entreprises souhaitant optimiser leurs ressources informatiques. La virtualisation permet de réduire les coûts, d'améliorer la flexibilité des systèmes et de simplifier la gestion des réseaux. 
+                                J'ai décidé de me focaliser sur la virtualisation côté serveur, et plus particulièrement sur les solutions proposées par VMware, telles que VMware ESXi et vSphere. Ces technologies jouent un rôle crucial pour les entreprises en optimisant l'utilisation de leurs ressources informatiques. La virtualisation serveur permet de réduire les coûts, d'améliorer la flexibilité des infrastructures et de simplifier la gestion centralisée des systèmes. En consolidant plusieurs serveurs virtuels sur un seul serveur physique, VMware aide les entreprises à maximiser l'efficacité, renforcer la sécurité et faciliter la maintenance de leurs environnements IT.
                             </p>
                             <!-- Pearltrees Embedding -->
                             <div class="text-center mt-5">
@@ -796,6 +795,8 @@ Le domaine de l'informatique est en perpétuelle évolution, il est donc importa
                                     par <a href="https://www.pearltrees.com/chokkapik" 
                                        style="color:#818181; font-size:13px;" target="_blank">chokkapik</a>
                                 </span>
+                                <br>
+                                <strong><p>Remarque : Pour consulter les résumés, veuillez cliquer sur « La Virtualisation », sélectionner un article, puis cliquer sur « Commentaire ».</p></strong>
                             </div>
                         </div>
                     </div>
