--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                                     <span class="badge bg-primary">MarkDown</span>
                                 </div>
                                 <div class="d-flex gap-3">
-                                    <a href="#" class="btn btn-outline-primary">
+                                    <a href="https://github.com/Chok4pik/Chokatech-Doc.git" target="_blank" class="btn btn-outline-primary">
                                         <i class="bi bi-github me-2"></i>Code
                                     </a>
                                     <a href="https://chok4pik.github.io/Chokatech-Doc/" target="_blank" class="btn btn-outline-primary">
@@ -467,7 +467,7 @@
                                     <span class="badge bg-primary">JavaScript</span>
                                 </div>
                                 <div class="d-flex gap-3">
-                                    <a href="#" class="btn btn-outline-primary">
+                                    <a href="https://github.com/Chok4pik/abdoul-portfolio.github.io.git" target="_blank" class="btn btn-outline-primary">
                                         <i class="bi bi-github me-2"></i>Code
                                     </a>
                                     <a href="https://chok4pik.github.io/abdoul-portfolio.github.io/" target="_blank"  class="btn btn-outline-primary">
@@ -493,7 +493,7 @@
                                     <span class="badge bg-primary">React</span>
                                 </div>
                                 <div class="d-flex gap-3">
-                                    <a href="#" class="btn btn-outline-primary">
+                                    <a href="https://github.com/Chok4pik/abdoul-portfolio.github.io.git" class="btn btn-outline-primary">
                                         <i class="bi bi-github me-2"></i>Code
                                     </a>
                                 </div>
