--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                                     <span class="badge bg-primary">React</span>
                                 </div>
                                 <div class="d-flex gap-3">
-                                    <a href="https://github.com/Chok4pik/abdoul-portfolio.github.io.git" class="btn btn-outline-primary">
+                                    <a href="https://github.com/Chok4pik/abdoul-portfolio.github.io.git" target="_blank" class="btn btn-outline-primary">
                                         <i class="bi bi-github me-2"></i>Code
                                     </a>
                                 </div>
