--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <p class="lead text-justify">
-                        Au cours du premier semestre, j'ai été confronté à un choix entre SISR et SLAM. Cependant, mon intérêt pour la cybersécurité a finalement orienté ma décision vers le réseau, où je cherche à acquérir des bases solides, essentielles pour évoluer dans ce domaine. 
-                        Mon parcours en BTS SIO (Services Informatiques aux Organisations), spécialité SISR, m'a permis de développer une expertise technique solide et une approche méthodique des problèmes. Mon objectif est de poursuivre mes études jusqu'à un bac +5.
+                        Au cours de mon premier semestre en BTS SIO, j’ai dû choisir entre deux options : SISR (Solutions d’Infrastructure, Systèmes et Réseaux) et SLAM (Solutions Logicielles et Applications Métiers). Bien que chacune présente ses atouts, c’est mon intérêt pour la cybersécurité qui m’a guidé vers le domaine du réseau. En effet, acquérir des bases solides en réseau me semble essentiel pour évoluer dans cet univers.
+                        Mon parcours en BTS SIO, spécialité SISR, m'a permis d'acquérir des compétences techniques solides et une méthode efficace pour résoudre les problèmes. Elle a renforcé ma motivation à poursuivre mes études, avec l'objectif d'atteindre un niveau bac+5 pour progresser en cybersécurité.
                     </p>
                     <a href="assets/compte-rendu/CV.pdf"  target="_blank" class="btn btn-primary mt-4">Mon CV</a>
                 </div>
