--- a/index.html
+++ b/index.html
@@ -753,6 +753,8 @@
                                 <p class="card-text">Rapport de stage de deuxième année</p>
                                 <div class="mb-3">
                                     <span class="badge bg-primary me-2">Administration réseau</span>
+                                    <span class="badge bg-primary me-2">Technicien niveau 1 et 2</span>
+                                    <span class="badge bg-primary me-2">Technicien itinérant</span>
                                 </div>
                                 <a href="assets/compte-rendu/stage2annee.pdf"  target="_blank" class="btn btn-outline-primary">
                                     <i class="bi bi-file-earmark-text me-2"></i>Lire le rapport
