--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-8 text-center">
                     <p class="lead text-justify">
                         Au cours de mon premier semestre en BTS SIO, j’ai dû choisir entre deux options : SISR (Solutions d’Infrastructure, Systèmes et Réseaux) et SLAM (Solutions Logicielles et Applications Métiers). Bien que chacune présente ses atouts, c’est mon intérêt pour la cybersécurité qui m’a guidé vers le domaine du réseau. En effet, acquérir des bases solides en réseau me semble essentiel pour évoluer dans cet univers.
-                        Mon parcours en BTS SIO, spécialité SISR, m'a permis d'acquérir des compétences techniques solides et une méthode efficace pour résoudre les problèmes. Elle a renforcé ma motivation à poursuivre mes études, avec l'objectif d'atteindre un niveau bac+5 pour progresser en cybersécurité.
+                        Mon parcours en BTS SIO, spécialité SISR, m'a permis d'acquérir des compétences techniques solides et une méthode efficace pour résoudre les problèmes. IL a renforcé ma motivation à poursuivre mes études, avec l'objectif d'atteindre un niveau bac+5 pour progresser en cybersécurité.
                     </p>
                     <a href="assets/compte-rendu/CV.pdf"  target="_blank" class="btn btn-primary mt-4">Mon CV</a>
                 </div>
@@ -425,6 +425,9 @@
             <li class="nav-item">
                 <button class="nav-link" data-bs-toggle="pill" data-bs-target="#internship">Rapports de Stage</button>
             </li>
+            <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="pill" data-bs-target="#synthese">Tableau de synthèse des réalisations professionnelles</button>
+            </li>
         </ul>
         <div class="tab-content">
             <!-- Personal Projects Tab -->
@@ -665,7 +668,7 @@
 
                                 </div>
                                 <div class="d-flex gap-3">
-                                    <a href="/assets/compte-rendu/haproxy_hearbeat.pdf" target="_blank" class="btn btn-outline-primary">
+                                    <a href="assets/compte-rendu/haproxy_hearbeat.pdf" target="_blank" class="btn btn-outline-primary">
                                         <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
                                     </a>
                                 </div>
@@ -763,6 +766,28 @@
                         </div>
                     </div>
                     <!-- FIN - Rapport de stage 2 -->
+                     
+                    <!-- Add more internship report cards -->
+                </div>
+            </div>
+            <div class="tab-pane fade" id="synthese">
+                <div class="row g-4">
+                    <!-- Internship Report Example -->
+                    <!-- Rapport de stage 1 -->
+                    <div class="col-md-6">
+                        <div class="card h-100">
+                            <img src="" class="card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Tableau de synthèse</h5>
+                                <p class="card-text"></p>
+                                <a href="https://drive.google.com/file/d/1S_INy749hBwVXHZhwhSSZZ0OMvJyR1Ds/view?usp=sharing" target="_blank" class="btn btn-outline-primary">
+                                    <i class="bi bi-file-earmark-text me-2"></i>Lire le tableau
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FIN - Rapport de stage 1 -->
+                     
                     <!-- Add more internship report cards -->
                 </div>
             </div>
